--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.13.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "next-firebase-auth-edge": "^1.7.0-canary.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
