--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.13.0",
+    "firebase-admin": "^12.4.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "next-firebase-auth-edge": "^1.7.0-canary.2",
