--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
     "lucide-react": "^0.436.0",
-    "next": "14.2.6",
+    "next": "^14.2.13",
     "next-firebase-auth-edge": "^1.7.0-canary.2",
     "react": "^18",
     "react-dom": "^18",
